<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp">

    <RadioGroup
        android:id="@+id/rgRoles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbBride"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:padding="@dimen/_10sdp"
            android:text="@string/lbl_bride"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12ssp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbGroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:padding="@dimen/_10sdp"
            android:text="@string/lbl_groom"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12ssp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbOthers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:padding="@dimen/_10sdp"
            android:text="@string/lbl_others"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12ssp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbGuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:padding="@dimen/_10sdp"
            android:text="@string/lbl_guest"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12ssp" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDone"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/lbl_done" />

</LinearLayout>
