<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/regular"
                android:text="@string/lbl_log_in"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15ssp"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignUpFree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/regular"
                android:text="@string/lbl_sign_up_for_free"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_12ssp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/draw_gray_round_rect"
            android:gravity="center"
            android:padding="@dimen/_9sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:src="@drawable/facebook" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignInFB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:paddingLeft="@dimen/_8sdp"
                android:paddingRight="@dimen/_8sdp"
                android:text="@string/lbl_sign_in_with_facebook"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/draw_gray_round_rect"
            android:gravity="center"
            android:padding="@dimen/_9sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/google" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignInGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:paddingLeft="@dimen/_8sdp"
                android:paddingRight="@dimen/_8sdp"
                android:text="@string/lbl_sign_in_with_google"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/regular"
            android:paddingTop="@dimen/_20sdp"
            android:paddingBottom="@dimen/_20sdp"
            android:text="@string/lbl_or_login_with_your_email"
            android:textColor="@color/colorHintGray"
            android:textSize="@dimen/_12ssp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailAddress"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_mail"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/regular"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/lbl_forgot_your_password"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_11ssp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/lbl_log_in" />

    </LinearLayout>
</RelativeLayout>